<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.19dp"
        android:fontFamily="@font/jost"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284.57dp"
        android:fontFamily="@font/jost"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.19dp"
        android:width="304.76dp"
        android:height="38.1dp"
        android:backgroundTint="@color/but_gray"
        android:fontFamily="@font/jost"
        android:text="@string/field_nickname"
        android:textColor="@color/text_field_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.19dp"
        android:width="304.76dp"
        android:height="38.1dp"
        android:backgroundTint="@color/but_gray"
        android:fontFamily="@font/jost"
        android:text="@string/field_email"
        android:textColor="@color/text_field_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.19dp"
        android:width="304.76dp"
        android:height="38.1dp"
        android:backgroundTint="@color/but_gray"
        android:fontFamily="@font/jost"
        android:text="@string/field_pass"
        android:textColor="@color/text_field_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/reg_go_back_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41.14dp"
        android:width="190.48dp"
        android:height="38.1dp"
        android:backgroundTint="@color/but_gray"
        android:fontFamily="@font/jost"
        android:text="@string/go_back"
        android:textColor="@color/text_field_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>