<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/but_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="374.1dp"
        android:fontFamily="@font/jost"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/authorization_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.19dp"
        android:width="224.76dp"
        android:height="40.38dp"
        android:backgroundTint="@color/but_gray"
        android:fontFamily="@font/jost"
        android:text="@string/authorization"
        android:textColor="@color/black"
        android:textColorHighlight="#933A3A"
        android:textColorLink="#852A2A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <Button
        android:id="@+id/registration_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.19dp"
        android:width="224.76dp"
        android:height="40.38dp"
        android:backgroundTint="@color/but_gray"
        android:fontFamily="@font/jost"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization_but" />

</androidx.constraintlayout.widget.ConstraintLayout>