<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:textSize="24sp"
        android:fontFamily="@font/jost"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26.67dp"/>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/user_button_block"
            android:layout_width="292.57dp"
            android:layout_height="52.57dp"
            android:backgroundTint="@color/but_gray"
            android:background="@drawable/rounded_button_background"
            android:paddingStart="11.43dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/user_icon_but"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/user_icon_desc"
                app:srcCompat="@drawable/user_icon"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/accountButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/jost"
                android:gravity="center"
                android:text="@string/account_text"
                android:textColor="@color/text_field_gray"
                android:textSize="24sp"
                android:paddingStart="10dp"
                android:clickable="false"
                android:focusable="false"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_button_block"
            android:layout_width="292.57dp"
            android:layout_height="52.57dp"
            android:layout_marginTop="22.86dp"
            android:backgroundTint="@color/but_gray"
            android:background="@drawable/rounded_button_background"
            android:paddingStart="11.43dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/settings_icon_but"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/user_icon_desc"
                app:srcCompat="@drawable/settings_icon"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/appSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/jost"
                android:gravity="center"
                android:text="@string/settings_app_text"
                android:textColor="@color/text_field_gray"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:clickable="false"
                android:focusable="false"/>
        </RelativeLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/mainNavigationButton"
        android:layout_width="53.33dp"
        android:layout_height="53.33dp"
        android:layout_marginBottom="28.57dp"
        android:background="@drawable/full_navigation_block"
        android:contentDescription="@string/search_button_desc"
        android:scaleType="center"
        android:src="@drawable/selected_settings_for_navigatiom_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"/>

    <RelativeLayout
        android:id="@+id/mainFullNavigationButton"
        android:layout_width="232.38dp"
        android:layout_height="45.71dp"
        android:layout_marginBottom="28.57dp"
        android:background="@drawable/full_navigation_block"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone">

        <ImageView
        android:id="@+id/center_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/selected_settings_for_navigatiom_icon"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/search_button_desc" />

        <ImageView
        android:id="@+id/left_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/center_icon"
        android:layout_centerVertical="true"
        android:layout_marginRight="23dp"
        android:src="@drawable/favorites_for_navigation_icon"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/favorites_button_desc" />

        <ImageView
        android:id="@+id/right_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_toRightOf="@id/center_icon"
        android:layout_centerVertical="true"
        android:layout_marginLeft="23dp"
        android:src="@drawable/search_for_navigation_icon"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings_button_desc" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>